--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="content">
     <div class="info-box">
       <h2>Что мы предлагаем?</h2>
-      <p>Мы предоставляем широкий спектр услуг, включая анализ данных, OSINT, а также уникальные решения для ваших нужд.</p>
+      <p>Мы предоставляем широкий спектр услуг, включая анализ данных, OSINT, а также уникальные решения СВ@ТОМ</p>
     </div>
     <div class="info-box">
       <h2>Как начать?</h2>
