--- a/products.html
+++ b/products.html
@@ -256,6 +256,30 @@
     </li>
   </ul>
 
+  <h2>Documents:</h2>
+  <ul>
+    <li>
+      <span>Forgery of passport - 10$</span>
+      <button class="buy-button" data-service="Forgery of passport" data-price="10" onclick="showModal(this)">Оплатить</button>
+    </li>
+    <li>
+      <span>Make a fake translation screen - 3$</span>
+      <button class="buy-button" data-service="Make a fake translation screen" data-price="3" onclick="showModal(this)">Оплатить</button>
+    </li>
+  </ul>
+
+  <h2>Substances:</h2>
+  <ul>
+    <li>
+      <span>Mephedr0ne recipe - 150$</span>
+      <button class="buy-button" data-service="Mephedr0ne recipe" data-price="150" onclick="showModal(this)">Оплатить</button>
+    </li>
+    <li>
+      <span>Her0in recipe - 250$</span>
+      <button class="buy-button" data-service="Her0in recipe" data-price="250" onclick="showModal(this)">Оплатить</button>
+    </li>
+  </ul>
+
   <button class="back-button" onclick="location.href='index.html'">Вернуться</button>
 
   <!-- Модальное окно -->
