--- a/fsf.html
+++ b/fsf.html
@@ -79,7 +79,7 @@
   </header>
 
   <div class="content">
-    <button onclick="window.location.href='https://www.donationalerts.com/r/jenyabepxobhi'">Оплата картой</button>
+    <button onclick="window.location.href='https://www.donationalerts.com/r/jenyabepxobhi'">Оплата картой(Временно не работает)</button>
     <button onclick="window.location.href='https://t.me/send?start=IVlmBxLLKZNn'">Оплата криптовалютой</button>
   </div>
 </body>
